---
title: Diagrama de modelos
---
erDiagram 
    Films |o--|| PeopleInFilms : film_id
    People |o--|| PeopleInFilms : people_id

    Films {
        id ForeingKey
        title string
        name CharField
        episode_id number
        characters boolean
    }

    PeopleInFilms {
        id ForeingKey-Generated
        film_id number
        people_id number
    }
    
    People {
        id ForeingKey
        name string
        gender string
        species string
    }